--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -1,3 +1,13 @@
-FROM postgres
-ENV POSTGRES_PASSWORD docker
-ENV POSTGRES_DB docker_checkpoint_database
+FROM node:12.16.1-buster-slim
+
+RUN mkdir -p /src/app
+
+WORKDIR /src/app
+
+COPY . /src/app
+
+RUN yarn install
+
+EXPOSE 3001
+
+CMD [ "npm", "start" ]
