--- a/back-end/package.json
+++ b/back-end/package.json
@@ -2,10 +2,11 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx knex migrate:rollback && npx knex migrate:latest && npx knex seed:run && node app.js"
+    "start": "npx knex migrate:rollback && npx knex migrate:latest && npx knex seed:run && node app.js",
+    "migrate": "npx knex migrate:latest"
   },
   "keywords": [],
   "author": "",
