--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx knex migrate:rollback && npx knex migrate:latest && npx knex seed:run && node app.js",
-    "migrate": "npx knex migrate:latest"
+    "init": "npx knex migrate:rollback && npx knex migrate:latest && npx knex seed:run"
   },
   "keywords": [],
   "author": "",
