--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest",
     "start": "npx knex migrate:rollback && npx knex migrate:latest && npx knex seed:run && node app.js",
     "init": "npx knex migrate:rollback && npx knex migrate:latest && npx knex seed:run"
   },
@@ -13,9 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "eslint-plugin-jest": "^24.4.0",
     "express": "^4.17.1",
+    "jest": "^27.0.6",
     "knex": "^0.95.10",
     "pg": "^8.7.1",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "supertest": "^6.1.6"
   }
 }
