--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xvfb": "^0.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,7 +39,10 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@testing-library/cypress": "^8.0.0",
+    "cypress": "^8.3.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/langley234/sdi-library-instructions.git"
